syntax = "proto3";

option java_multiple_files = true;
option java_package = "klattice.api";
option java_outer_classname = "KLApiProto";

package klattice.api;

import "substrait/plan.proto";
import "substrait/type.proto";

service Query {
    rpc Prepare (QueryDescriptor) returns (PreparedQuery) {};
}

message QueryDescriptor {
    repeated SchemaDescriptor sources = 1;
    string query = 2;
}

message SchemaDescriptor {
    uint64 schema_id = 1;
    string relName = 2;
    repeated RelDescriptor projections = 3;
}

message RelDescriptor {
    uint64 schema_id = 1;
    string relName = 2;
    repeated string columnName = 3;
    repeated substrait.Type typing = 4;
}

message PreparedQuery {
    bool errored = 1;
    oneof result {
        substrait.Plan plan = 2;
        QueryDiagnostics diagnostics = 3;
    }
}

message QueryDiagnostics {
    string error_message = 1;
}