syntax = "proto3";

option java_multiple_files = true;
option java_package = "klattice.msg";
option java_outer_classname = "KLApiProto";

package klattice.msg;

import "substrait/plan.proto";
import "substrait/type.proto";

message QueryDescriptor {
    repeated Environment environ = 1;
    string query = 2;
}

message Environment {
    uint64 schema_id = 1;
    string relName = 2;
    repeated RelDescriptor rels = 3;
    optional Environment parent = 4;
}

message PlanDescriptor {
    repeated Environment environ = 1;
    substrait.Plan plan = 2;
    optional PlanDescriptor next = 3;
}

message RelDescriptor {
    uint64 schema_id = 1;
    string relName = 2;
    repeated ColumnDescriptor columns = 3;
    uint64 estimated_rows = 4;
    oneof next {
        RelDescriptor next_rel = 5;
        EndpointDescriptor next_endpoint = 6;
    }
}

message ColumnDescriptor {
    string columnName = 1;
    substrait.Type type = 2;
}

message EndpointDescriptor {
    HostAndPort host_port = 1;
    bytes query_payload = 2;
    ResponseAdaptorKind response_adaptor = 3;
}

message HostAndPort {
    string host = 1;
    uint32 port = 2;
}

enum ResponseAdaptorKind {
    ARROW = 0;
    AVRO = 1;
}

message PreparedQuery {
    bool errored = 1;
    oneof result {
        PlanDescriptor plan = 2;
        QueryDiagnostics diagnostics = 3;
    }
}

message QueryDiagnostics {
    string error_message = 1;
}
